<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#616161">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:id="@+id/hijo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/introduzca_su_nombre"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginStart="104dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/txtNombre"/>

        <TextView
            android:id="@+id/txtClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_nacimiento"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txtNombre"/>

        <EditText
            android:id="@+id/edtFecha"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/introduzca_su_fecha_de_nacimiento"
            android:textSize="16sp"
            android:background="@color/white"
            android:inputType="date"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/txtClave"
            android:layout_below="@+id/edtNombre"/>

        <CheckBox
            android:id="@+id/chckBoxRecordatorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_recordatorio"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginEnd="80dp"
            android:layout_below="@+id/edtFecha"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:text="@string/aceptar"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/chckBoxRecordatorio"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/txtRespuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/btnAceptar"/>
    </RelativeLayout>
</LinearLayout>